# synthea-rdf

./: .gitignore  LICENSE  MANIFEST.in  README.md  configuration.yaml  conversion.py  data_script.sh  dua_and_trustscore_generation.py  pyproject.toml  setup.py  test.ipynb  trustscore_dua_generator_gui.py  trustscore_generation.py
abstract/: literal.py  namespace.py  resource.py  uri.py
data_usage_agreement/: __init__.py  generator.py  resource.py  settings.py
dua/: __init__.py  constants.py  generator.py  resource.py  settings.py
generator_gui/: dua_generator.py
gui/: synthea_converter.py  trustscore_dua_generator.py
ontology/: synthea_covid_19_ontology.owl  synthea_ontology.owl
synthea_ontology/: synthea_ontology.ttl
synthea_rdf/: Encounter.py  GraphBuilder.py  Observation.py  Organization.py  Patient.py  Provider.py  encounter.py  graph.py  helper.py  literal.py  memory.py  observation.py  organization.py  patient.py  provider.py  resource.py  setting.py  settings.py  standalone.py  trust.py  uri.py
synthea_rdf/conversion/: converter.py
synthea_rdf/definitions/: classes.py  data_properties.py  datatypes.py  object_properties.py
synthea_rdf/util/: configuration.py
tests/: test_convert.py
trustscore/: generator.py  resource.py
